--- a/Firefox/popup.html
+++ b/Firefox/popup.html
@@ -588,6 +588,7 @@
                                         <br>• Ticket shelf - removes ticket shelf section from video page
                                         <br>• AI summary - removes AI summary section from video page
                                         <br>• End Screen - removes end screen cards (thumbnails linking to other creator's videos) from the end of a video
+                                        <br>• Extra search categories - removes categories like "Channels new to you", "Previously watched", "From related searches" from search results
                                     </span>
                                 </div>
                             </redux>
@@ -622,6 +623,7 @@
                                     <label class="toggle-label"><input type="checkbox" name="hideTicketShelf" class="settings toggle"></input><span aria-label="Ticket shelf"></span></label>
                                     <label class="toggle-label"><input type="checkbox" name="hideAISummary" class="settings toggle"></input><span aria-label="AI summary"></span></label>
                                     <label class="toggle-label"><input type="checkbox" name="hideEndScreen" class="settings toggle"></input><span aria-label="End Screen"></span></label>
+                                    <label class="toggle-label"><input type="checkbox" name="hideExtraSearchCategories" class="settings toggle"></input><span aria-label="Extra search categories"></span></label>
                                 </div>
                             </div>
                         </div>
