--- a/Firefox/changelog.html
+++ b/Firefox/changelog.html
@@ -118,6 +118,11 @@
                 <div class="header-main" style="margin-top:20px;">What's new?</div> 
                 <div id="changes">
                     <ul>
+                        <b class="update">3.9.4</b><span> - 11.10.2025</span>
+                        <li>added an option to hide extra search categories like "Channels new to you", "Previously watched", "From related searches" from search results <note>(enabled by default, found within "Hide features" section of settings)</note></li>
+                        <li>fixed hiding homepage avatars</li>
+                        <li>fixed hiding shorts in search results</li>
+                        <li>CSS fixes</li>
                         <b class="update">3.9.3</b><span> - 08.08.2025</span>
                         <li>fixed the option to hide channel avatars on homepage and merged it with a similar option</li>
                         <b class="update">3.9.2</b><span> - 03.08.2025</span>
