--- a/Firefox/changelog.html
+++ b/Firefox/changelog.html
@@ -118,6 +118,11 @@
                 <div class="header-main" style="margin-top:20px;">What's new?</div> 
                 <div id="changes">
                     <ul>
+                        <b class="update">3.10.0</b><span> - 27.10.2025</span>
+                        <li>initial changes to restore the old video player UI - more changes will follow</li>
+                        <li>added an option to enable immersive fullscreen mode which hides everything besides the exit button while in fullscreen mode <note>(disabled by default, found within "Video page" section of settings)</note></li>
+                        <li>fixes for "Restore old icons" setting</li>
+                        <li>CSS fixes</li>
                         <b class="update">3.9.4</b><span> - 11.10.2025</span>
                         <li>added an option to hide extra search categories like "Channels new to you", "Previously watched", "From related searches" from search results <note>(enabled by default, found within "Hide features" section of settings)</note></li>
                         <li>fixed hiding homepage avatars</li>
